# MMDDesktopMascot

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MMDDesktopMascot.slnx  README.md  fetch_bullet.ps1
MMDDesktopMascot/: MMDDesktopMascot.vcxproj  MMDDesktopMascot.vcxproj.filters
MMDDesktopMascot/Animation/: BoneSolver.cpp  BoneSolver.hpp  MmdAnimator.cpp  MmdAnimator.hpp  ModelLoadWorker.cpp  ModelLoadWorker.hpp  VmdMotion.cpp  VmdMotion.hpp
MMDDesktopMascot/Common/: ExceptionHelper.hpp  FileUtil.cpp  FileUtil.hpp  StringUtil.cpp  StringUtil.hpp
MMDDesktopMascot/Core/: App.cpp  App.hpp  Settings.cpp  Settings.hpp  WinMain.cpp
MMDDesktopMascot/Model/: BinaryReader.cpp  BinaryReader.hpp  PmxLoader.cpp  PmxModel.cpp  PmxModel.hpp
MMDDesktopMascot/Physics/: BulletPhysicsAdapter.cpp  BulletPhysicsAdapter.hpp  MmdPhysicsWorld.cpp  MmdPhysicsWorld.hpp  PhysicsDebugLog.cpp  PhysicsDebugLog.hpp
MMDDesktopMascot/Platform/: MMDDesktopMascot.rc  Resource.h  app.manifest  framework.h
MMDDesktopMascot/Rendering/: Camera.cpp  Camera.hpp  DcompRenderer.cpp  DcompRenderer.hpp  Dx12Context.cpp  Dx12Context.hpp  GpuResourceManager.cpp  GpuResourceManager.hpp  PmxModelDrawer.cpp  PmxModelDrawer.hpp  RenderPipelineManager.cpp  RenderPipelineManager.hpp  WicTexture.cpp  WicTexture.hpp
MMDDesktopMascot/Rendering/Shaders/: BloomBlur_CS.hlsl  BloomDownsample_CS.hlsl  Edge_PS.hlsl  Edge_VS.hlsl  FXAA_PS.hlsl  FXAA_VS.hlsl  PMX_PS.hlsl  PMX_VS.hlsl  SSAO_CS.hlsl  Shadow_PS.hlsl  Shadow_VS.hlsl  SkinningCommon.hlsli  ToneMap_PS.hlsl
MMDDesktopMascot/UI/: InputManager.cpp  InputManager.hpp  ProgressWindow.cpp  ProgressWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp  TrayIcon.cpp  TrayIcon.hpp  TrayMenuWindow.cpp  TrayMenuWindow.hpp  Win32UiUtil.cpp  Win32UiUtil.hpp  WindowManager.cpp  WindowManager.hpp
